# random-os

./: .gitignore  Cargo.toml  build.sh  build_aarch64.sh  build_efi.sh  build_x86_64.sh  clean.sh  efi  kernel.elf  layout.ld  load_grub.sh  run.sh  run_aarch64.sh  run_efi.sh  run_x86_64.sh  test.txt
.cargo/: config.toml
experiments/: execute_edk.sh
experiments/efi/: KernelEFI.c  KernelEFI.dsc  KernelEFI.inf  setup_edk.sh
src/: main.rs  memory.rs  print.rs
src/asm/aarch64/: handle_alloc_error.s
targets/: README.md  rpi5.json
targets/aarch64/: aarch64.json  layout.ld  trampoline.s
targets/x86_64/: layout.ld  reset-vector.s  trampoline.s  x86_64.json
