[package]
name = "os"
version = "0.1.0"
edition = "2024"

[build]
target = "targets/aarch64-unknown-none.json"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["panic_immediate_abort"]
panic = "abort"

[target.aarch64]
linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
rustflags = ["-C", "link-arg=--script=layout.ld"]

[target.x86_64]
linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
rustflags = ["-C", "link-arg=--script=layout.ld"]

[dependencies]
uefi = "0.36.1"
