[package]
name = "os"
version = "0.1.0"
edition = "2024"

[build]
target = "targets/aarch64-unknown-none.json"

[dependencies]
log = "0.4.29"
spin = "0.10.0"
uart = "3.0.1"
uefi = "0.36.1"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["panic_immediate_abort"]
panic = "abort"
codegen-units = 1

[profile.release]
codegen-units = 1

[target.aarch64]
linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
rustflags = ["-C", "link-arg=--script=targets/aarch64/layout.ld"]
